--- a/install.ipynb
+++ b/install.ipynb
@@ -14,7 +14,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista=[1,2,3]\n",
+    "df =pd.DataFrame(lista)"
+   ]
   }
  ],
  "metadata": {
