--- a/install.ipynb
+++ b/install.ipynb
@@ -15,8 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista=[1,2,3]\n",
-    "df =pd.DataFrame(lista)"
+    "lista=[0,1,2,3,4,5,6,7,8,9]\n",
+    "df =pd.DataFrame(lista, column=('Numeros'))"
    ]
   }
  ],
