--- a/pandas_stap_first.ipynb
+++ b/pandas_stap_first.ipynb
@@ -18,6 +18,15 @@
     "lista=[0,1,2,3,4,5,6,7,8,9]\n",
     "df =pd.DataFrame(lista, column=('Numeros'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
